--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Search Tutorials | spoken-tutorial.org</title>
-        <link rel="shortcut icon" href="./includes/images/favicon.ico">
-    </head>
-    <frameset>
-        <frame name="frame1" id="frame1" frameborder="0" src="./videos/home.html" scrolling=yes>
-    </frameset>
+<head>
+<title>birthday wishes</title>
+</head>
+<body>
+
+<h1>HAPPY BIRTHDAY</h1>
+<p> To the world's most beautiful girl.</p>
+
+</body>
 </html>
