--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+h1 {color:red;}
+p {color:blue;}
+</style>
 <title>birthday wishes</title>
 </head>
 <body>
 
 <h1>HAPPY BIRTHDAY</h1>
+<img src="pilla.jpg" alt="Smiley face" >
 <p> To the world's most beautiful girl.</p>
 
 </body>
