--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ p {color:blue;}
 <body>
 
 <h1>HAPPY BIRTHDAY</h1>
+  <img src="cake.jpg" alt="Smiley face" >
 <img src="pilla.jpg" alt="Smiley face" >
 <p> To the world's most beautiful girl.</p>
 
