--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ p {color:blue;}
 <body>
 
 <h1>HAPPY BIRTHDAY</h1>
-  <img src="cake.jpg" alt="Smiley face" >
-<img src="pilla.jpg" alt="Smiley face" >
+  <img src="cake.jpg" alt="cake" >
+<img src="pilla.jpg" alt="divya gaati pic" >
 <p> To the world's most beautiful girl.</p>
 
 </body>
