--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {color:blue;}
 <body>
 
 <h1>HAPPY BIRTHDAY</h1>
-  <img src="cake.jpg" alt="cake" >
+  <img src="cake.jpg" alt="cake" height="42" width="42" >
 <img src="pilla.jpg" alt="divya gaati pic" >
 <p> To the world's most beautiful girl.</p>
 
