--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <style>
+  div
+     {border-style: double;}
 h1 {color:red;}
 p {color:blue;}
 </style>
@@ -10,7 +12,9 @@ p {color:blue;}
 <body>
 
 <h1>HAPPY BIRTHDAY</h1>
-  <img src="cake.jpg" alt="cake" height="420" width="420" >
+  <div>
+  <img src="cake.jpg" alt="cake" height="300" width="300" >
+    <div>
   <p>     </p>
 <img src="pilla.jpg" alt="divya gaati pic" >
 <p> To the world's most beautiful girl.</p>
