--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-  div
+ .cake
      {border-style: double;}
 h1 {color:red;}
 p {color:blue;}
@@ -12,7 +12,7 @@ p {color:blue;}
 <body>
 
 <h1>HAPPY BIRTHDAY</h1>
-  <div>
+  <div class="cake">
   <img src="cake.jpg" alt="cake" height="300" width="300" >
     <div>
   <p>     </p>
