--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <style>
  .cake
      {border-style: solid;}
+ #divya {
+  border-image-source: url(pilla.png);
+}
 h1 {color:red;}
 p {color:blue;}
 </style>
@@ -16,7 +19,9 @@ p {color:blue;}
   <img src="cake.jpg" alt="cake" height="300" width="300" >
     <div>
   <p>     </p>
+     <div class="divya">
 <img src="pilla.jpg" alt="divya gaati pic" >
+      </div>
 <p> To the world's most beautiful girl.</p>
 
 </body>
