--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
  .cake
      {border-style: solid;}
- #divya {
+ .divya {
   border-image-source: url(pilla.png);
 }
 h1 {color:red;}
@@ -20,7 +20,7 @@ p {color:blue;}
     <div>
   <p>     </p>
      <div class="divya">
-<img src="pilla.jpg" alt="divya gaati pic" >
+<img src="pilla.jpg" alt="divya gaati pic" height="300" width="300">
       </div>
 <p> To the world's most beautiful girl.</p>
 
