--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <style>
+ h1 {
+  font-size: 40px;
+  font-family:"Comic Sans MS", cursive, sans-serif
+}
+
  .cake
      {border-style: solid;}
  .divya {
