--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   font-family:"Comic Sans MS", cursive, sans-serif
 }
 p{
+ font-color: blue;
  font-size: 40px;
+ font-family:"Comic Sans MS", cursive, sans-serif
  }
 
  .cake
@@ -30,7 +32,7 @@ p {color:blue;}
      <div class="divya">
 <img src="pilla.jpg" alt="divya gaati pic" height="300" width="300">
       </div>
-<p><b> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.</b></p>
+<p> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.</p>
      <p>Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
       Actuallga ma chelli mee frnd ki phn chesi ekkada unnav ani adigite ippude meeting ayindhi cc nunchi 
       bayitiki vasthuna ani chepindhi anta nv bayita unav emo ani vasthunte.
