--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 p{
  font-color: blue;
  font-size: 40px;
- font-family:"Comic Sans MS", cursive, sans-serif
+ font-family: "Courier New", Courier, monospace
  }
 
  .cake
