--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+ body {
+  background-color: lightblue;
+}
  h1 {
   font-size: 70px;
   font-family:"Comic Sans MS", cursive, sans-serif
