--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ p {color:blue;}
 </head>
 <body>
 
-<h1>HAPPY BIRTHDAY</h1>
+<h1>HAPPY BIRTHDAY <b>DIVYA</b></h1>
   <div class="cake">
   <img src="cake.jpg" alt="cake" height="300" width="300" >
     <div>
   <p>     </p>
      <div class="divya">
-<img src="pilla.jpg" alt="divya gaati pic" height="300" width="300">
+<img src="pilla.jpg" alt="divya gaati pic" height="450" width="600">
       </div>
 <p> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.</p>
      <p>Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
