--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ p {color:blue;}
 
 <h1>HAPPY BIRTHDAY <b>DIVYA</b></h1>
   <div class="cake">
-  <img src="cake.jpg" alt="cake" height="300" width="300" >
+  <img src="cake.jpg" alt="cake" height="300" width="300" align:"middle"  >
     <div>
   <p>     </p>
      <div class="divya">
-<img src="pilla.jpg" alt="divya gaati pic" height="800" width="800">
+<img src="pilla.jpg" alt="divya gaati pic" height="800" width="800" align:"middle">
       </div>
 <p> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.</p>
      <p>Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
