--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <style>
  body {
-  background-color: lightblue;
+  background-color: white;
 }
  h1 {
   font-size: 70px;
   font-family:"Comic Sans MS", cursive, sans-serif
 }
 p{
- font-color: blue;
+ font-color: black;
  font-size: 40px;
  font-family: "Courier New", Courier, monospace
  }
@@ -33,7 +33,7 @@ p {color:blue;}
     <div>
   <p>     </p>
      <div class="divya">
-<img src="pilla.jpg" alt="divya gaati pic" height="800" width="800" align:"middle">
+<img src="pilla.jpg" alt="divya gaati pic" height="500" width="500" align:"middle">
       </div>
 <p> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.</p>
      <p>Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
