--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@ h1 {color:red;}
      <div class="divya">
 <img src="pilla.jpg" alt="divya gaati pic" height="500" width="500" align:"middle">
       </div>
-<font color="black"><p> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.</p>
-     <p>Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
+<font color="black"><p><b> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.
+     Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
       Actuallga ma chelli mee frnd ki phn chesi ekkada unnav ani adigite ippude meeting ayindhi cc nunchi 
       bayitiki vasthuna ani chepindhi anta nv bayita unav emo ani vasthunte.
       Nv emo side steps medha kurchunav.
       Ninu chudagane heart beat raise ayindhi divya.
       nenu pakkaki vellipoya chusavga.prathi roju netho matladali anukunta but edho teliyani bayam.
       pakka country tho yudham chesi negheyachu emo kani netho matladatham intha kasthama anipinchindi divya.
-      divya netho matladathaki matalu rakha illa pettina divya.happy birthday divya.let be friends divya .</p></font>
+      divya netho matladathaki matalu rakha illa pettina divya.happy birthday divya.let be friends divya .</b></p></font>
 
 </body>
 </html>
