--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ h1 {color:red;}
     <div>
   <p>     </p>
      <div class="divya">
-<img src="pilla.jpg" alt="divya gaati pic" height="500" width="500" align:"middle">
+<p><img src="pilla.jpg" alt="divya gaati pic" height="500" width="500" align:"middle"></p>
       </div>
 <font color="black"><p><b> basic ga naku na feelings ni express chestham radu alantidi intha complex vishyani ela chepthanoi telidu neku.
      Gurthunda conventionlo meeting jarigindi tarvata nv cc kinda kurchunavga .
