--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ h1 {color:red;}
 
 <h1>HAPPY BIRTHDAY <b>DIVYA</b></h1>
   <div class="cake">
-  <img src="cake.jpg" alt="cake" height="300" width="300" align:"middle"  >
+ <!-- <img src="cake.jpg" alt="cake" height="300" width="300" align:"middle"  > -->
     <div>
   <p>     </p>
      <div class="divya">
